<resources>
    <string name="app_name">ToDoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_todo_found">No Todo found.</string>
    <string name="title">Title</string>
    <string name="priority">Priority</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="priority_high">Priority High</string>
    <string name="priority_medium">Priority Medium</string>
    <string name="priority_low">Priority Low</string>
    <string name="delete_all">Delete All</string>
    <string name="add_todo">Add Todo</string>
    <string name="required">Required</string>
    <string name="delete">Delete</string>
</resources>